public/vi.less
/* ... */
/* Green Button Hover */
button.icon.activateselection[type="button"]:hover,
button.text.save[type="button"]:hover,
button.icon.add[type="button"]:hover,
button.icon.save.close[type="button"]:hover {
  border: 1px solid #479c42;
  color: #fff;
  background-color: #298342;
  background: -moz-linear-gradient(top, #298342 0%, #479c42 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #298342), color-stop(100%, #479c42));
  background: -webkit-linear-gradient(top, #298342 0%, #479c42 100%);
  background: -o-linear-gradient(top, #298342 0%, #479c42 100%);
  background: -ms-linear-gradient(top, #298342 0%, #479c42 100%);
  background: linear-gradient(to bottom, #298342 0%, #479c42 100%);
  filter: progid:DXImageTransform.Microsoft.Gradient(StartColorStr='#298342', EndColorStr='#479c42', GradientType=0);
}

/* White Icon Sprite for Green Buttons */
button.icon.add[type="button"]:before,
button.icon.activateselection[type="button"]:before,
button.text.save[type="button"]:before,
button.icon.add[type="button"]:hover:before,
button.icon.save.close[type="button"]:before,
button.icon.save.close[type="button"]:hover:before {
  background-image: url(icons/vi_actions_sprite_white.svg);
}

/* Loading Buttons */
button.icon.is_loading[type="button"]:before,
button.is_loading[type="button"]:before,
button.icon.is_loading[type="button"]:hover:before,
button.is_loading[type="button"]:hover:before,
button.icon.save.close.is_loading[type="button"]:hover:before {
  background-image: url(icons/is_loading.gif);
  background-position: 0px 0px;
}

/* Standard Buttons (28px wide, transparent Text) */
button.icon.close[type="button"],
button.icon.activateselection[type="button"],
button.text.save[type="button"],
button.icon.delete[type="button"],
button.icon.delete.is_disabled[type="button"]:hover,
button.icon.text[type="button"]:hover,
button.icon.flipview[type="button"]:hover,
button.icon.is_disabled[type="button"]:hover {
  color: transparent;
  letter-spacing: -1em;
  overflow: hidden;
  min-width: 28px;
  transition-delay: 0;
}

/* Primary Buttons (120px wide without hover) */
button.icon.save.close[type="button"],
button.icon.add[type="button"] {
    color:#fff;
    overflow: visible;
    min-width: 120px;
    letter-spacing: normal;
}

/* 120px wide Hover */
button.icon.delete[type="button"]:hover,
button.icon.close[type="button"]:hover,
button.icon.activateselection[type="button"]:hover,
button.icon.save.close[type="button"]:hover {
  overflow: visible;
  min-width: 120px;
  letter-spacing: normal;
}

/* Disabled Buttons */
button.icon.delete.is_disabled[type="button"] {
  background: #e0e0e0;
}

button.icon.delete.is_disabled[type="button"]:hover,
button.icon.is_disabled[type="button"]:hover {
  border-color: #999;
  background: #e0e0e0;
}
button.icon.delete.is_disabled[type="button"]:before,
button.icon.is_disabled:before {
  opacity: 0.3;
  background-image: url(icons/vi_actions_sprite.svg)!important;
}

button.icon.delete.is_disabled[type="button"],
button.icon.is_disabled {
  cursor: default;
  color: transparent;
  border: 1px solid #ccc;
  box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.3);
}

/* #preview
================================================== */

.vi_operator > .preview {
  margin-top: -70px;
}

.vi_operator > .preview iframe {
  width: 100%;
  min-height: 80%;
  border: 1px solid #ccc;
  overflow:scroll;
}

/* #vi_forms
================================================== */
/*Define Accordion box*/
form {
  color: #474747;
  overflow: hidden;
  width: 100%;
}
form fieldset {
  width: 100%;
  float: left;
  overflow: hidden;
  color: #333;
  border: 0;
  padding: 0;
}
form fieldset legend {
  min-width: 580px;
  width: 100%;
  position: relative;
}
form fieldset legend a,
legend a:visited {
  padding: 8px 15px;
  display: block;
  font-weight: normal;
  color: #555;
  text-decoration: none;
  background: #ddd;
  border: 1px solid #bbb;
}
legend a:hover {
  color: #666;
  background: #ccc;
  text-decoration: none;
  cursor: pointer;
}

form fieldset.is_incomplete:target legend a,
form fieldset.is_incomplete legend a {
  background-color: #1495de;
  border-color: #073866;
  color: #fff;
}

form fieldset.is_incomplete legend a:before {
  background-image: url(icons/vi_actions_sprite_white.svg);
  background-repeat: no-repeat;
  width: 16px;
  height: 16px;
  content: ' ';
  position: relative;
  float: left;
  margin-top: 1px;
  margin-left: -4px;
  margin-right: 5px;
  background-position: -64px 0px;
}

/*General Accordion****************************************************************************/
/*Set style of open slide*/
form fieldset:target legend a {
  color: #333;
  background: #ffffff;
}
form fieldset legend a:before {
  background-image: url(icons/vi_actions_sprite.svg);
  background-repeat: no-repeat;
  width: 16px;
  height: 16px;
  content: ' ';
  position: relative;
  float: left;
  margin-top: 3px;
  margin-left: 4px;
  margin-right: 7px;
  background-position: 0px -64px;
}

/*form fieldset.default legend a:before,*/
form fieldset.active legend a:before,
form fieldset:target legend a:before {
  background-position: -16px -64px;
}

form fieldset.is_incomplete section,
form fieldset:target section
/*form fieldset.default section*/ {
  display: block;
}
/*set style of closed slide*/
form fieldset section,
/*form fieldset:target ~ .default section*/ {
  display: none;
  border: 1px solid #eee;
  padding: 3% 3% 5%;
  background: #fcfcfc;
  overflow: hidden;
}
/*Vertical Accordion *************************************************************************/
form fieldset {
  height: 40px;
  -webkit-transition: all 0.2s ease-out;
  -moz-transition: all 0.2s ease-out;
  -o-transition: all 0.2s ease-out;
  -ms-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}
/*Set height of the slide*/
form fieldset.is_incomplete,
form fieldset:target,
/*form fieldset.default*/ {
  /*min-height: 150px;*/
  height: auto;
  width: 100%;
}
/* ... */

